infra/k8s/hashi-vault/devwebapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devwebapp
  labels:
    app: devwebapp
spec:
  serviceAccountName: default
  containers:
    - name: app
      image: burtlo/devwebapp-ruby:k8s
