infra/k8s/hashi-vault/pod-devwebapp-with-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devwebapp-with-annotations
  labels:
    app: devwebapp-with-annotations
  annotations:
    vault.hashicorp.com/agent-inject: 'true'
    vault.hashicorp.com/role: 'webapp'
    vault.hashicorp.com/agent-inject-secret-credentials.txt: 'secret/data/spinnaker/config'
spec:
  serviceAccountName: default
  containers:
    - name: app
      image: burtlo/devwebapp-ruby:k8s
